# AOC_2023_CPP

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  add_day_files.sh  format_all_files.sh
benchmark/: CMakeLists.txt  benchmark.cpp
common/: CMakeLists.txt  errorMsg.h  fileHelper.cpp  fileHelper.h  helperFunctions.cpp  helperFunctions.h  helperTemplates.h  inputHelper.cpp  inputHelper.h  intervalHelper.cpp  intervalHelper.h  positionHelper.cpp  stringHelper.cpp  stringHelper.h
common/inc/: SolutionConcept.h  errorMsg.h  inputHelper.h  intervalHelper.h  positionHelper.h  stringHelper.h
common/src/: CMakeLists.txt  errorMsg.cpp  inputHelper.cpp  intervalHelper.cpp  positionHelper.cpp  stringHelper.cpp
common/test/: CMakeLists.txt  common_test.cpp
main/src/: main.cpp
solutions/: CMakeLists.txt  day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h
solutions/inc/: day1.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h
solutions/src/: CMakeLists.txt  day1Impl.cpp  day1Impl.h  day2Impl.cpp  day2Impl.h  day3Impl.cpp  day3Impl.h  day4Impl.cpp  day4Impl.h  day5Impl.cpp  day5Impl.h  day6Impl.cpp  day6Impl.h  day7Impl.cpp  day7Impl.h  day8Impl.cpp  day8Impl.h  day9Impl.cpp  day9Impl.h
solutions/test/: CMakeLists.txt  solutionTests.cpp
src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp
